// Copyright 2016-2023, Pulumi Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";

package pulumirpc.engine;

option go_package = "github.com/pulumi/pulumi/sdk/v3/proto/go/engine";

// EngineInterface is the interface to the core pulumi engine, it is used by both the CLI and the automation
// API to run all core commands. This is _highly_ experimental and currently subject to breaking changes without warning.
service Engine {
    // GetLanguageTests returns a list of all the language tests.
    rpc GetLanguageTests(GetLanguageTestsRequest) returns (GetLanguageTestsResponse) {}

    // RunLanguageTest runs a single test of the language plugin.
    rpc RunLanguageTest(RunLanguageTestRequest) returns (RunLanguageTestResponse) {}
}

message GetLanguageTestsRequest {

}

message GetLanguageTestsResponse {
    repeated string tests = 1;
}

message RunLanguageTestRequest {
    string test = 1;
    string language_plugin_address = 2;
}

message RunLanguageTestResponse {
    bool success = 1;
    string message = 2;
    string stdout = 3;
    string stderr = 4;
}